need to polish brush effect

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,38 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>hi</title>
+		<title>Brush Masking</title>
 	</head>
 	<body>
-		<h1>hello</h1>
-		<h2>wadawda</h2>
+		<canvas id="webgl"></canvas>
+
+		<!-- <script id="vertShader" type="x-shader/x-vert">
+			attribute vec2 aVertexPosition;
+			attribute vec2 aTextureCoord;
+
+			uniform mat3 projectionMatrix;
+
+			varying vec2 vTextureCoord;
+
+			void main(void)
+			{
+				gl_Position = vec4((projectionMatrix * vec3(aVertexPosition, 1.0)).xy, 0.0, 1.0);
+				vTextureCoord = aTextureCoord;
+			}
+		</script> -->
+
+		<!-- vTextureCoord = coored
+		sampler = texture object drawn -->
+		<!-- <script id="fragShader" type="x-shader/x-frag">
+			varying vec2 vTextureCoord;
+
+			uniform sampler2D uSampler;
+
+			void main(void){
+				vec4 color = texture2D(uSampler , vTextureCoord);
+				color.r = 1.0;
+				gl_FragColor = vec2(color)
+			}
+		</script> -->
 	</body>
 </html>
-
-<!-- <%= %> = webpack access to html -->
